Fix the introductory text overflow in mobile

--- a/style.css
+++ b/style.css
@@ -80,31 +80,31 @@ main {
   overflow: hidden;
 }
 /* During no search */
-main::after {
+main::before {
   content: "Search for Github users!";
   position: absolute;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0.5;
-  font-size: min(8vw, 2rem);
+  font-size: min(7vw, 2rem);
   color: var(--primary-txt-clr);
   white-space: nowrap;
   z-index: -1;
 }
  /* Site is no github */
-main::before {
+main::after {
   content: "This site only uses API from Github.com";
   width: 100%;
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 98%;
+  top: 96%;
   opacity: .5;
   transform: translate(-50%, -50%);
   z-index: -1;
   color: var(--secondary-txt-clr);
-  font-size: min(4vw, 1rem);
+  font-size: min(3vw, 1rem);
 
 }
 .result-card {
